# game_of_life

./: CMakeLists.txt  LICENSE  README.adoc
.github/workflows/: tests.yml
app/: CMakeLists.txt  main.cpp
game_of_life/: README.adoc
game_of_life/no_constraints/: README.adoc
game_of_life/no_constraints/inc/: cell.hpp  generation.hpp  population.hpp
game_of_life/no_constraints/src/: CMakeLists.txt  cell.cpp  game_of_life.cpp  generation.cpp
game_of_life/no_constraints/test/: CMakeLists.txt  game_of_life.cpp
lib/: CMakeLists.txt
lib/interface/: CMakeLists.txt
lib/interface/inc/: cell.hpp  generation.hpp
lib/no_constraints/: CMakeLists.txt
lib/no_constraints/inc/: cells.hpp
lib/no_constraints/src/: cell.cpp  cells.cpp  generation.cpp
lib/no_lists/: CMakeLists.txt  README.adoc
lib/no_lists/inc/: cells.hpp  prime_utils.hpp
lib/no_lists/src/: cells.cpp  generation.cpp  prime_utils.cpp
no_constraints/: CMakeLists.txt
no_constraints/inc/: cell.hpp  game_of_life.hpp  generation.hpp
no_constraints/src/: CMakeLists.txt  cell.cpp  generation.cpp  main.cpp
no_constraints/test/: CMakeLists.txt  game_of_life.cpp
no_lists/: README.adoc
test/: CMakeLists.txt  game_of_life.cpp  no_lists_prime_utils.cpp
viewer/: CMakeLists.txt  main.cpp
viewer/inc/: theme.hpp  utils.hpp
viewer/src/: main.cpp  utils.cpp
