include(FetchContent)

FetchContent_Declare(
    googletest
    GIT_REPOSITORY https://github.com/google/googletest.git
    GIT_TAG v1.17.0
)
FetchContent_MakeAvailable(googletest)

include(GoogleTest)

add_executable(GameOfLifeTests game_of_life.cpp)
target_link_libraries(GameOfLifeTests PRIVATE GTest::gtest_main)

gtest_discover_tests(GameOfLifeTests)
